[package]
  name = "mdbook-findrep"
  description = "mdBook find / replace preprocessor"
  version = "0.2.0"
  edition = "2024"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  license = "MIT"
  repository = "https://github.com/brocaar/mdbook-findrep"

[dependencies]
  mdbook = "0.4"
  toml = "0.8"
  clap = "4.5"
  semver = "1.0"
  serde_json = "1.0"
